[tool.poetry]
name = "devry"
version = "0.1.0"
description = "Devry - Portable Development Environment Setup CLI"
authors = ["Jorge Alves <jorgeandrealves@gmail.com>"]
license = "MIT"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pytest-flake8 = "^1.1.1"

[tool.poetry.scripts]
devry = "src.run:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
